@@ -589,7 +589,9 @@ public class GameParser
         {
             Element current = (Element) playerElements.get(i);
             String name = current.getAttribute("name");
-            boolean isOptional = Boolean.getBoolean(current.getAttribute("optional"));
+            //It appears the commented line ALWAYS returns false regardless of the value of current.getAttribute("optional")
+            //boolean isOptional = Boolean.getBoolean(current.getAttribute("optional"));
+            boolean isOptional = current.getAttribute("optional").equals("true");
             PlayerID newPlayer = new PlayerID(name, isOptional, data);
             playerList.addPlayerID(newPlayer);
         }
